# todo

./: .env  Cargo.toml
.sqlx/: query-0566022d259a8fda70283db11627df5fb3ce8fef950f0ffe6b266bf6646093cd.json  query-289e280e4099c0e65a67453b1156d9fb8c01bcebed43faa5de5f26c0fd4329bb.json  query-28deb298bc143c6108a5205324317cd17cf4874379fad8144b3c2fd9fbd786fb.json  query-55e2fbf67be6410182248de841ee0f1237e370b3b8d66be28010096f5689865c.json  query-61781c2c9ff87b4ca533b62dfd8d9f5bb0d7f1c541e76281d09ce16e2ec51fb0.json  query-6664c38890e548b3de180df2280efd3af338c432660908fc2809d5997357b90d.json  query-678008c6d3718408427b2f8f589d6c38c1ad6ebeb16aeffe7c973e2120822c82.json  query-7293e936e6e287962b4dc63a9af55c771efcf91f0bad5973ae421359a9f7e529.json  query-7b4b5b818b40cb78c177f05e13b277ef76102c1214c6280073f3a7e8a94ba4ef.json  query-927fdc3c5bc88cdaab4451057aca583805e7d869966bb491543026c445e849ae.json  query-ad5891872d22441a7ce1434815eab53695c09e5fdb42b9adc8db74e13f6c4278.json  query-c915a133f08138e79d74ab4f0312bbca84a9278b87553c58502244d64d6a3d86.json  query-cc939ea794025fa5172929ec81de111ed23b287f109eac2a9782dc3f51c62ed0.json  query-f4f8110ae03602340d192d9080209d2013419d53c97ff74361fd8ee1bc4026c8.json
src/: app_state.rs  auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  model.rs  service.rs  user_handlers.rs
